--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -65,7 +65,7 @@ text-transform: uppercase;
   });
   
   linkedinIcon.addEventListener('mouseleave', () => {
-    document.body.style.backgroundColor = '#F2F1E6';
+    document.body.style.backgroundColor = '#e0f2fe';
   });
   
   });
