--- a/src/components/Scrollingcontainer.astro
+++ b/src/components/Scrollingcontainer.astro
@@ -1,14 +1,13 @@
 <main>
     <section class="full">
-      <header>
-        <h3>Fun facts om mig</h3>
-        <!--<p>
+      <!--<header>
+        <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
           veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
           commodo consequat.
-        </p> -->
-      </header>
+        </p>
+      </header> -->
   
       <ul role="list">
         <li>
@@ -104,7 +103,10 @@
         flex-basis: min(400px, 90%);
         flex-shrink: 0;
         background: #fee2e2;
+        background: #fffafa;
+
         color: #000000;
+
         border-radius: 8px;
         font-size: 1rem;
         padding: 2.75rem 2.1875rem;
@@ -113,6 +115,8 @@
         h3 {
           font-weight: 700;
           font-size: 1.5625rem;
+          color: #dc2626;
+
         }
       }
     }
