--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,6 +41,8 @@ import Scrollingcontainer from "../components/Scrollingcontainer.astro";
 
 
   </div>
+  <h3 class="facts">Fun facts om mig</h3>
+
   <Scrollingcontainer/>
 
 </Layout>
@@ -103,8 +105,13 @@ import Scrollingcontainer from "../components/Scrollingcontainer.astro";
     font-weight: 600;
   }
 
-  .praktik{
+  .praktik, .facts{
     text-transform: uppercase;
     margin-top: 2rem;
+  }
+
+  .facts{
+    margin-inline: auto;
+    max-width: 750px;
   }
 </style>
