--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -11,7 +11,7 @@
 
 a.active {
     font-weight: bold;
-    color: #0077b5; /* Skift farven efter behov */
+    color: #000000; /* Skift farven efter behov */
 }
     .navbar {
       display: flex;
