--- a/src/components/Scrollingcontainer.astro
+++ b/src/components/Scrollingcontainer.astro
@@ -11,25 +11,25 @@
   
       <ul role="list">
         <li>
-          <h3>Fun fact #1</h3>
+          <h3>#1</h3>
           <p> Søndag er min yndlingsdag, og dagen hvor jeg er allermest produktiv
           </p>
         </li>
   
         <li>
-          <h3>Fun fact #2</h3>
-          <p>Hvis jeg ikke blev optaget på multimediedesign studiet, ville jeg gerne have sægt ind i politiet.
+          <h3>#2</h3>
+          <p>Hvis jeg ikke blev optaget på multimediedesign studiet, ville jeg gerne have søgt ind i politiet.
           </p>
         </li>
   
         <li>
-          <h3>Fun fact #3</h3>
+          <h3>#3</h3>
           <p>Jeg elsker at gå til koncerter!
           </p>
         </li>
   
         <li>
-          <h3>Fun fact #4</h3>
+          <h3>#4</h3>
           <p>Jeg bryder mig ikke om kaffe, men byd mig gerne på en chai
           </p>
         </li>
@@ -54,7 +54,7 @@
    
   
     main {
-      padding-block: 4rem;
+      padding-block: 2rem;
       display: grid;
       grid:
         auto /
@@ -100,22 +100,21 @@
       list-style-type: none;
   
       li {
-        flex-basis: min(400px, 90%);
+        flex-basis: min(300px, 80%);
         flex-shrink: 0;
         background: #fee2e2;
-        background: #fffafa;
-
         color: #000000;
-
-        border-radius: 8px;
+        border-radius: 2rem;
         font-size: 1rem;
-        padding: 2.75rem 2.1875rem;
+        padding: 2.3rem 2.1875rem;
         align-self: start;
   
         h3 {
-          font-weight: 700;
-          font-size: 1.5625rem;
-          color: #dc2626;
+          font-weight: 500;
+          font-size: 1rem;
+          color: #b91c1c;
+          text-transform: uppercase;
+        
 
         }
       }
