--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,94 +1,97 @@
 <div class="navbar">
-    <a href="/">Profil</a>
-    <a href="/projekter">Projekter</a>
-    <a href="/cv">CV</a>
-    <a href="https://www.linkedin.com/in/nina-grandil-hildebrandt-712525171" aria-label="LinkedIn">
-        <img src="/linkedin-kopi.svg" alt="" class="logo" id="linkedin-icon"/>
-    </a>
-  </div>
-  
-  <style>
+  <a href="/">Profil</a>
+  <a href="/projekter">Projekter</a>
+  <a href="/cv">CV</a>
+  <a
+    href="https://www.linkedin.com/in/nina-grandil-hildebrandt-712525171"
+    aria-label="LinkedIn"
+  >
+    <img src="/linkedin-kopi.svg" alt="" class="logo" id="linkedin-icon" />
+  </a>
+</div>
 
-a.active {
+<style>
+  a.active {
     font-weight: bold;
     color: #000000; /* Skift farven efter behov */
+  }
+  .navbar {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 15px;
+    margin-right: 2rem;
+    margin-top: 1rem;
+  }
+
+  .logo {
+    width: 40px;
+    height: auto;
+    /*margin-left: 8px;*/
+  }
+
+  a {
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    color: #b91c1c;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: 400;
+    /*font-family: "Poppins", sans-serif;*/
+    font-family: "Raleway";
+    font-family: "Arimo";
+    margin-right: 40px;
+    /*text-transform: uppercase;*/
+  }
+
+  
+@media screen and (max-width: 600px) {
+
+  a {
+    font-size: 1rem;
+  }
+
+  .navbar {
+    display: flex;
+    justify-content: right;
+    margin-top: 1rem;
+    margin-right: 0rem;
+  }
+
+  .logo {
+    width: 35px;
+  }
+
+
 }
-    .navbar {
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      padding: 15px;
-      margin-right: 2rem;
-      margin-top: 1rem;
-    }
-  
-    .logo {
-      width: 40px;
-      height: auto;
-      /*margin-left: 8px;*/
-    }
-  
-  
-    a {
-      text-decoration: none;
-      color: rgb(0, 0, 0); 
-      color: #b91c1c;    
-text-transform: uppercase;
-      font-size: 16px;
-      font-weight: 500;
-      /*font-family: "Poppins", sans-serif;*/
-      font-family: "Raleway";
-      font-family: "Arimo";
+</style>
 
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const linkedinIcon = document.getElementById("linkedin-icon");
 
-      
-      margin-right: 40px;
-      /*text-transform: uppercase;*/
-    }
-  
-   /* @media screen and (min-width: 600px) {
-  
-      .navbar {
-      margin-right: 2rem;
-      }
-  
-      .logo {
-      margin-left: 2rem;
-  
-    }
-      
-      }*/
-  </style>
-  
-  <script>
-  
-      document.addEventListener('DOMContentLoaded', function(){
-      const linkedinIcon = document.getElementById('linkedin-icon');
-  
-      linkedinIcon.addEventListener('mouseover', () => {
-    document.body.style.backgroundColor = '#0077b5';
-  });
-  
-  linkedinIcon.addEventListener('mouseleave', () => {
-    document.body.style.backgroundColor = '#e0f2fe';
-  });
-  
-  });
-
-  document.addEventListener('DOMContentLoaded', function(){
-        // Find den aktuelle URL
-        var currentUrl = window.location.href;
-
-        // Find alle links i navigationsmenuen
-        var navLinks = document.querySelectorAll('.navbar a');
-
-        // Loop gennem links og tilføj aktiv klasse til det link, der matcher den aktuelle URL
-        navLinks.forEach(function(link) {
-            // Sammenlign URL'en uden sidst '/' for at undgå unødvendige forskelle
-            if (link.href.replace(/\/$/, '') === currentUrl.replace(/\/$/, '')) {
-                link.classList.add('active');
-            }
-        });
+    linkedinIcon.addEventListener("mouseover", () => {
+      document.body.style.backgroundColor = "#0077b5";
     });
-  </script>
-  
+
+    linkedinIcon.addEventListener("mouseleave", () => {
+      document.body.style.backgroundColor = "#e0f2fe";
+    });
+  });
+
+  document.addEventListener("DOMContentLoaded", function () {
+    // Find den aktuelle URL
+    var currentUrl = window.location.href;
+
+    // Find alle links i navigationsmenuen
+    var navLinks = document.querySelectorAll(".navbar a");
+
+    // Loop gennem links og tilføj aktiv klasse til det link, der matcher den aktuelle URL
+    navLinks.forEach(function (link) {
+      // Sammenlign URL'en uden sidst '/' for at undgå unødvendige forskelle
+      if (link.href.replace(/\/$/, "") === currentUrl.replace(/\/$/, "")) {
+        link.classList.add("active");
+      }
+    });
+  });
+</script>
