--- a/src/components/Scrollingcontainer.astro
+++ b/src/components/Scrollingcontainer.astro
@@ -12,27 +12,40 @@
       <ul role="list">
         <li>
           <h3>#1</h3>
-          <p> Søndag er min yndlingsdag, og dagen hvor jeg er allermest produktiv
+          <p> Søndag er den bedste dag på ugen. Ofte er vejret godt og jeg føler mig altid positiv og produktiv. 
           </p>
         </li>
   
         <li>
           <h3>#2</h3>
-          <p>Hvis jeg ikke blev optaget på multimediedesign studiet, ville jeg gerne have søgt ind i politiet.
+          <p>Hvis jeg ikke blev optaget på multimediedesign studiet, ville jeg have overvejet at søge ind i politiet. Har altid synes at krimi er spændende 
           </p>
         </li>
   
         <li>
           <h3>#3</h3>
-          <p>Jeg elsker at gå til koncerter!
+          <p>Jeg elsker at gå til koncerter. Der er altid god energi og en unik stemning, som jeg virkelig nyder.
           </p>
         </li>
   
         <li>
           <h3>#4</h3>
-          <p>Jeg bryder mig ikke om kaffe, men byd mig gerne på en chai
+          <p>Jeg har en lille udfordring ved at kende forskel på højre og venstre.
           </p>
         </li>
+
+        <li>
+          <h3>#5</h3>
+          <p>Jeg er et kæmpe A-mennekse. Jeg foretrækker at stå tidligt op, og få mest muligt ud af min dag.
+          </p>
+        </li>
+
+        <li>
+          <h3>#6</h3>
+          <p>Jeg er ikke så god til at se film. Det tager så lang tid, og jeg falder ofte i søvn. Medmindre det er en biograftur, det er hyggeligt. 
+          </p>
+        </li>
+
       </ul>
     </section>
   </main>
@@ -54,7 +67,7 @@
    
   
     main {
-      padding-block: 2rem;
+      padding-block: 1rem;
       display: grid;
       grid:
         auto /
@@ -133,21 +146,14 @@
       /*font-size: 2.8125rem;*/
       text-transform: uppercase;
     }
-  
-    header {
-      /*color: #595566;*/
-      margin-top: 1rem;
-      /*margin-inline: auto;*/
-      max-width: 700px;
-    padding: 25px;
-  
+    
   
       p {
         /*max-inline-size: 67ch;*/
         font-family: "raleway";
 
       }
-    }
+
   
  
   </style>
