--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,7 +62,7 @@ import Scrollingcontainer from "../components/Scrollingcontainer.astro";
   .knapContainer{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 1rem;
+    /*gap: 1rem;*/
     margin-bottom: 4rem;
   }
 
