--- a/src/components/Scrollingcontainer.astro
+++ b/src/components/Scrollingcontainer.astro
@@ -18,7 +18,7 @@
   
         <li>
           <h3>#2</h3>
-          <p>Hvis jeg ikke blev optaget på multimediedesign studiet, ville jeg have overvejet at søge ind i politiet. Har altid synes at krimi er spændende 
+          <p>Hvis jeg ikke blev optaget på multimediedesign studiet, ville jeg have overvejet at søge ind i politiet. 
           </p>
         </li>
   
@@ -40,11 +40,6 @@
           </p>
         </li>
 
-        <li>
-          <h3>#6</h3>
-          <p>Jeg er ikke så god til at se film. Det tager så lang tid, og jeg falder ofte i søvn. Medmindre det er en biograftur, det er hyggeligt. 
-          </p>
-        </li>
 
       </ul>
     </section>
