--- a/src/pages/projekter.astro
+++ b/src/pages/projekter.astro
@@ -24,7 +24,7 @@ import Layout from "../layouts/Layout.astro";
   </div>
 
     <section id="first-section">
-      <article><img src="/ux-kopi.webp" alt="">
+      <article><img src="../ux-kopi.webp" alt="">
         <div>
         <h3>UX Copenhagen</h3>
           <p class="tekst">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta eius reiciendis voluptatem nobis laudantium modi aliquid, a eum odit unde omnis quas dignissimos, eveniet consectetur itaque illum amet illo esse!</p>
@@ -32,7 +32,7 @@ import Layout from "../layouts/Layout.astro";
       </div>
     </article>
 
-      <article><img src="/ca-kopi.webp" alt="">
+      <article><img src="../ca-kopi.webp" alt="">
           <div><h3>CA Akasse</h3>
 
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo ducimus ratione dolore porro sit debitis recusandae dolor, laudantium ipsam quo eos, assumenda rem placeat atque, sapiente pariatur illo. Libero, quasi?</p>
@@ -41,7 +41,7 @@ import Layout from "../layouts/Layout.astro";
           </div>
       </article>
 
-      <article><img src="/vahlwood-kopi.webp" alt=""><div>
+      <article><img src="../vahlwood-kopi.webp" alt=""><div>
         <h3>Vahl Wood</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta eius reiciendis voluptatem nobis laudantium modi aliquid, a eum odit unde omnis quas dignissimos, eveniet consectetur itaque illum amet illo esse!</p>
         <button>Se løsningen</button>
