--- a/src/pages/projekter.astro
+++ b/src/pages/projekter.astro
@@ -27,7 +27,8 @@ import Layout from "../layouts/Layout.astro";
       <article><img src="../ux-kopi.webp" alt="">
         <div>
         <h3>UX Copenhagen</h3>
-          <p class="tekst">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta eius reiciendis voluptatem nobis laudantium modi aliquid, a eum odit unde omnis quas dignissimos, eveniet consectetur itaque illum amet illo esse!</p>
+          <p class="tekst">UX Copenhagen er en årlig konference, der samler eksperter og fagfolk inden for brugeroplevelse (UX) og design fra hele verden. Konferencen fokuserer på at diskutere de nyeste trends og bedste praksis inden for UX-design. I samarbejde med UX Copenhagen har vi lavet et redesign af deres hjemmeside for at forbedre brugeroplevelsen og præsentationen af konferenceindholdet.
+          </p>
           <button>Se løsningen</button>
       </div>
     </article>
@@ -35,7 +36,8 @@ import Layout from "../layouts/Layout.astro";
       <article><img src="../ca-kopi.webp" alt="">
           <div><h3>CA Akasse</h3>
 
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo ducimus ratione dolore porro sit debitis recusandae dolor, laudantium ipsam quo eos, assumenda rem placeat atque, sapiente pariatur illo. Libero, quasi?</p>
+              <p>Vi skabte et kampagnesite for en af CA A-kasses medlemsfordele, der fulgte deres brandidentitet og farveskema. Sitet blev designet til at være både informativt og engagerende, med det formål at tydeliggøre fordelene ved medlemskabet.
+              </p>
               <button>Se løsningen</button>
 
           </div>
