--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -6,7 +6,7 @@
     href="https://www.linkedin.com/in/nina-grandil-hildebrandt-712525171"
     aria-label="LinkedIn"
   >
-    <img src="/linkedin-kopi.svg" alt="" class="logo" id="linkedin-icon" />
+    <img src="/images/linkedin-kopi.svg" alt="" class="logo" id="linkedin-icon" />
   </a>
 </div>
 
