--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ import Scrollingcontainer from "../components/Scrollingcontainer.astro";
       <p>I løbet af min uddannelse har jeg udviklet en større interesse inden for digitalt design, UI/UX og frontendudvikling. Jeg håber på at lande en praktikplads, der understøtter et sundt og positivt teammiljø, men som også giver mig mulighed for at bidrage aktivt til projektarbejdet og deltage i skabelsen af digitale løsninger.</p>
       <p class="pBottom">Jeg søger en praktikplads med en periode på 10 uger og opstart slut august/start september.</p>
     </section>
-    <section><img src="/portræt-kopi.webp" alt=""></section>
+    <section><img src="/images/portræt-kopi.webp" alt=""></section>
   </div>
 
   <h3 class="facts">Fun facts om mig</h3>
