--- a/src/pages/projekter.astro
+++ b/src/pages/projekter.astro
@@ -24,7 +24,7 @@ import Layout from "../layouts/Layout.astro";
   </div>
 
     <section id="first-section">
-      <article><img src="/ux-kopi.webp" alt="">
+      <article><img src="/images/ux-kopi.webp" alt="">
         <div>
         <h3>UX Copenhagen</h3>
           <p class="tekst">I samarbejde med UX Copenhagen har vi redesignet deres hjemmeside for at forbedre brugeroplevelsen og præsentationen af konferenceindholdet. Konferencen samler eksperter og fagfolk inden for UX og design fra hele verden for at diskutere de nyeste trends og bedste praksis.
@@ -33,7 +33,7 @@ import Layout from "../layouts/Layout.astro";
       </div>
     </article>
 
-      <article><img src="/ca-kopi.webp" alt="">
+      <article><img src="/images/ca-kopi.webp" alt="">
           <div><h3>CA Akasse</h3>
               <p>Vi skabte et kampagnesite for en af CA A-kasses medlemsfordele, der fulgte deres brandidentitet og farveskema. Sitet blev designet til at være både informativt og engagerende, med det formål at tydeliggøre fordelene ved medlemskabet.
               </p>
@@ -42,7 +42,7 @@ import Layout from "../layouts/Layout.astro";
           </div>
       </article>
 
-      <article><img src="/vahlwood-kopi.webp" alt=""><div>
+      <article><img src="/images/vahlwood-kopi.webp" alt=""><div>
         <h3>Vahl Wood</h3>
         <p>I vores eksamensprojekt fokuserede vi på at redesigne brandidentiteten for snedkervirksomheden Vahl Wood. Vi skabte et nyt visuelt udtryk, der bedre afspejlede deres håndværksmæssige dygtighed og æstetiske værdier. </p>
         <button>Se løsningen</button>
