--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -91,6 +91,7 @@ import Layout from "../layouts/Layout.astro";
     margin-top: 1.5rem;
     font-weight: 500;
     font-family: "raleway", serif;
+    color: #27272a;
   }
 
   .col1,
