--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,8 +25,8 @@ import Scrollingcontainer from "../components/Scrollingcontainer.astro";
     </section>
 
 	<div class="knapContainer">
-    <section><button>Se mine projekter</button>
-    </section><button>Se mit CV</button><section>
+    <a href="/projekter"><button>Se mine projekter</button></a>
+    <a href="/cv"><button>Se mit CV</button></a>
 	</div>
 
   <h3 class="praktik">Praktik forventninger</h3>
@@ -66,7 +66,7 @@ import Scrollingcontainer from "../components/Scrollingcontainer.astro";
     margin-bottom: 4rem;
   }
 
-  button{
+  button {
 	margin-top: 1rem;
 	border: none;
 	/*background-color: #dc2626;*/
