--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,4 +112,17 @@ import Scrollingcontainer from "../components/Scrollingcontainer.astro";
   .facts{
 margin-top: 4rem;
   }
+
+
+  @media screen and (min-width: 600px) {
+
+
+    .knapContainer{
+    gap: 1rem;
+  }
+
+
+
+
+}
 </style>
