--- a/src/components/Scrollingcontainer.astro
+++ b/src/components/Scrollingcontainer.astro
@@ -111,7 +111,7 @@
         flex-basis: min(300px, 80%);
         flex-shrink: 0;
         background: #fee2e2;
-        color: #000000;
+        color: #27272a;
         border-radius: 2rem;
         font-size: 1rem;
         padding: 2.3rem 2.1875rem;
