--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -150,6 +150,10 @@ import Layout from "../layouts/Layout.astro";
     text-align: center;
   }
 
+  .uddoverskrift{
+    margin-top: 2rem;
+  }
+
   @media screen and (max-width: 600px) {
 
 
