--- a/src/pages/projekter.astro
+++ b/src/pages/projekter.astro
@@ -34,7 +34,7 @@ import Layout from "../layouts/Layout.astro";
     </article>
 
       <article><img src="/images/ca-kopi.webp" alt="">
-          <div><h3>CA Akasse</h3>
+          <div><h3>CA A-kasse</h3>
               <p>Vi skabte et kampagnesite for en af CA A-kasses medlemsfordele, der fulgte deres brandidentitet og farveskema. Sitet blev designet til at være både informativt og engagerende, med det formål at tydeliggøre fordelene ved medlemskabet.
               </p>
               <button>Se løsningen</button>
