--- a/src/pages/projekter.astro
+++ b/src/pages/projekter.astro
@@ -76,7 +76,7 @@ import Layout from "../layouts/Layout.astro";
   }
   img {
     width: 300px; 
-    height: 100%;
+    height: auto;
     border-radius: 1.5rem;
 
   }
