--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -20,7 +20,7 @@
     justify-content: flex-end;
     align-items: center;
     padding: 15px;
-    margin-right: 2rem;
+    /*margin-right: 2rem;*/
     margin-top: 1rem;
   }
 
