--- a/src/pages/projekter.astro
+++ b/src/pages/projekter.astro
@@ -10,17 +10,16 @@ import Layout from "../layouts/Layout.astro";
       Under mit andet semester på multimediedesignuddannelsen på KEA har jeg
       sammen med min studiegruppe arbejdet på diverse projekter, herunder
       redesigns for UX Copenhagen og VahlWood samt udviklingen af en kampagne
-      for CA a-kasse.
+      for CA A-kasse.
     </p>
 
-    <p> Vores tilgang til opgaverne startede med en grundig
-      analyse af målgruppen for at opnå en dybere forståelse af deres behov og
-      indsamle vigtige indsigter. Derefter igangsatte vi designprocessen ved at
-      skabe en prototype i Figma, hvor løbende test og tilpasninger blev
-      foretaget. Afslutningsvis implementerede vi vores færdigheder inden for
+    <p> Vi indledte opgaveprocessen med en målgruppeanalyse for at indsamle relevante indsigter. Derefter skabte vi prototyper i Figma, hvor vi kontinuerligt testede og tilpassede dem. Afslutningsvis implementerede vi vores færdigheder inden for
       HTML, CSS og JavaScript til at kode de endelige websites. Projekterne har
       derfor givet mig erfaring med værktøjer som <strong> Git, GitHub, Astro, Netlify,
       Figma, supabase og Adobe-pakken.</strong></p>
+
+      <p>På mit igangværende 3. semester, hvor jeg har valgt valgfaget 'Frontend', har jeg fået mere erfaring med værktøjer og frameworks såsom <strong>React, Vite, Next.js, Tailwind og Vercel.</strong>
+      </p>
   </div>
 
     <section id="first-section">
@@ -85,10 +84,12 @@ import Layout from "../layouts/Layout.astro";
     max-width: 48ch;
   }
 
-  /*.topp{
-    font-weight: 600;
+  .topp{
+    font-weight: 400;
     color: #ef4444;
-  }*/
+    font-size: 1.2rem;
+
+  }
 
   h3{
     text-transform: uppercase;
