--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -8,7 +8,9 @@ import Layout from "../layouts/Layout.astro";
     <h2 class="erfaringoverskrift">Erhvervs erfaring</h2>
     <div class="grid">
       <section class="col1">
-        <h2>Selvstændig</h2>
+        <h2 class="h2cv">Selvstændig</h2>
+        <h3 class="h3cv">Bryn og vippe stylist</h3>
+
         <p>Januar 2022 -</p>
       </section>
 
@@ -22,8 +24,8 @@ import Layout from "../layouts/Layout.astro";
       </section>
 
       <section class="col1">
-        <h2>KENNY ANKER</h2>
-        <h3>Salon og service manager</h3>
+        <h2 class="h2cv">KENNY ANKER</h2>
+        <h3 class="h3cv">Salon og service manager</h3>
         <p>Aug 2021 - Dec 2022</p>
       </section>
 
@@ -44,8 +46,8 @@ import Layout from "../layouts/Layout.astro";
       </section>
 
       <section class="col1">
-        <h2>Madklubben</h2>
-        <h3>Floor Manager</h3>
+        <h2 class="h2cv">Madklubben</h2>
+        <h3 class="h3cv">Floor Manager</h3>
         <p>Sep 2019 - Sep 2021</p>
       </section>
       <section class="col2">
@@ -74,17 +76,17 @@ import Layout from "../layouts/Layout.astro";
 
     <h2 class="uddoverskrift">Udannelse</h2>
     
-<div class="grid">
+<div class="grid2">
     <section class="col1">
-      <h3>KEA</h3>
-      <p>Multimediedesign</p>
-      <p class="arstal">2022 - 2024</p>
+      <h2 class="h2cv">KEA</h2>
+      <h3 class="h3cv">Multimediedesign</h3>
+      <p>2022 - 2024</p>
     </section>
 
     <section class="col2">
-      <h3>Niels Brock NVG</h3>
-      <p>HHX, markedsføring</p>
-      <p class="arstal">2017 - 2020</p>
+      <h2 class="h2cv">Niels Brock NVG</h2>
+      <h3 class="h3cv">HHX, markedsføring</h3>
+      <p>2017 - 2020</p>
     </section>
   </div>
 </div>
@@ -100,9 +102,13 @@ import Layout from "../layouts/Layout.astro";
     padding: 25px;
   }
 
-  .grid {
+  .grid, .grid2 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+
+  .grid{
+    margin-bottom: 2rem;
   }
 
   li {
@@ -116,14 +122,7 @@ import Layout from "../layouts/Layout.astro";
 
   }
 
-  p{
-    font-weight: 600;
-  }
-
-  .arstal{
-    font-weight: 500;
-  }
-
+ 
   .col1,
   .col2 {
     margin-top: 1rem;
@@ -133,9 +132,8 @@ import Layout from "../layouts/Layout.astro";
   }
 
   h1{
-    margin-bottom: 4rem;
+    margin-bottom: 5rem;
   }
-
 
   .erfaringoverskrift, .uddoverskrift{
     text-transform: uppercase;
@@ -148,10 +146,31 @@ import Layout from "../layouts/Layout.astro";
     font-size: 0.8rem;
     font-weight: 600;
     text-align: center;
+    margin-bottom: 2rem;
+
   }
 
   .uddoverskrift{
     margin-top: 2rem;
+  }
+
+  .h2cv{
+    color: black;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    font-size: 1.3rem;
+  }
+  .h3cv{
+    text-transform:none;
+    color: #dc2626;
+    font-size: 1rem;
+  }
+
+  p{
+    font-weight: 400;
+    font-size: 1rem;
+
   }
 
   @media screen and (max-width: 600px) {
@@ -164,6 +183,20 @@ import Layout from "../layouts/Layout.astro";
   .col2{
     margin-top: 0;
   }
+
+  p{
+    font-weight: 500;
+  }
+
+  .grid{
+    margin-bottom: 4rem;
+  }
+
+  .erfaringoverskrift, .uddoverskrift{
+    margin-bottom: 1rem;
+
+  }
+
 }
 
 
