--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -13,7 +13,7 @@
 <style>
   a.active {
     font-weight: bold;
-    color: #000000; /* Skift farven efter behov */
+    color: #000000; 
   }
   .navbar {
     display: flex;
@@ -37,11 +37,8 @@
     text-transform: uppercase;
     font-size: 1rem;
     font-weight: 400;
-    /*font-family: "Poppins", sans-serif;*/
-    font-family: "Raleway";
     font-family: "Arimo";
     margin-right: 40px;
-    /*text-transform: uppercase;*/
   }
 
   
