--- a/src/pages/projekter.astro
+++ b/src/pages/projekter.astro
@@ -13,12 +13,10 @@ import Layout from "../layouts/Layout.astro";
       for CA A-kasse.
     </p>
 
-    <p> Vi indledte opgaveprocessen med en målgruppeanalyse for at indsamle relevante indsigter. Derefter skabte vi prototyper i Figma, hvor vi kontinuerligt testede og tilpassede dem. Afslutningsvis implementerede vi vores færdigheder inden for
+    <> <p> Vi indledte opgaveprocessen med en målgruppeanalyse for at indsamle relevante indsigter. Derefter skabte vi prototyper i Figma, hvor vi kontinuerligt testede og tilpassede dem. Afslutningsvis implementerede vi vores færdigheder inden for
       HTML, CSS og JavaScript til at kode de endelige websites. Projekterne har
       derfor givet mig erfaring med værktøjer som <strong> Git, GitHub, Astro, Netlify,
-      Figma, supabase og Adobe-pakken.</strong></p>
-
-      <p>På mit igangværende 3. semester, hvor jeg har valgt valgfaget 'Frontend', har jeg fået mere erfaring med værktøjer og frameworks såsom <strong>React, Vite, Next.js, Tailwind og Vercel.</strong>
+      Figma, supabase og Adobe-pakken.</strong> På mit igangværende 3. semester, hvor jeg har valgt valgfaget 'Frontend', har jeg fået mere erfaring med værktøjer og frameworks såsom <strong>React, Vite, Next.js, Tailwind og Vercel.</strong>
       </p>
   </div>
 
@@ -86,9 +84,6 @@ import Layout from "../layouts/Layout.astro";
 
   .topp{
     font-weight: 400;
-    color: #ef4444;
-    font-size: 1.2rem;
-
   }
 
   h3{
